Исправлен Вход и регистрация